# Nova

./: CMakeLists.txt  README.md  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TextEditor.cpp  TextEditor.h  main.cpp
